testing/framework/resources/Advanced/Failing/mondrian/query6081.q
select count(*) as c0 from agg_tenant as agg_tenant;
